--- a/dockerfile_head
+++ b/dockerfile_head
@@ -18,4 +18,4 @@ COPY src/ /app/src/
 COPY client/ /app/client/
 
 # Command to run when container starts
-CMD ["python", "src/main.py", "--head-only"]
+#CMD ["python", "src/main.py", "--head-only"]
