Removed the folders

--- a/dockerfile_worker
+++ b/dockerfile_worker
@@ -11,6 +11,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+# Copy requirements and install minimal dependencies
+COPY requirements.txt .
+RUN pip install -r requirements.txt
 # Copy Whisper model cache from builder stage
 RUN python -c "import whisper; whisper.load_model('turbo')"
 
